# T2L-Backend-LESV

./: .env  .env.example  .gitignore  README_PYTHON.md  main.py  pyproject.toml  readme.md  requirements.txt  test_basic.py
api/: activities.py  admin.py  auth.py  health.py
config/: __init__.py  app_settings.py  config.py
docs/: README.md  routen-und-services.md
models/: __init__.py  auth.py  jwt.py  main.py  schema.py  user.py
scripts/: setup_supabase_functions.sql  test_all_endpoints.py  test_integration.py  test_jwt_direct.py  test_manual.py  test_real_supabase.py
services/: __init__.py  auth_service.py  jwt_service.py  person_service.py  schema_service.py  services.py  supabase_client.py
tests/: conftest.py  test_auth.py  test_schema.py  test_services.py
utils/: __init__.py  cookies.py
